Commit login page and auth

--- a/app/pages/.env
+++ b/app/pages/.env
@@ -1,1 +1,8 @@
 API_KEY=AIzaSyCn3aMlG95j_PLjeAGCtxiu8y8Asub-_1o
+
+# Simple hardcoded credentials (username: password)
+users = {
+    "dylan": "legalscope",
+    "jake": "legalscope",
+    "elias": "legalscope"
+}
