--- a/app/pages/.env
+++ b/app/pages/.env
@@ -1,8 +1,4 @@
 API_KEY=AIzaSyCn3aMlG95j_PLjeAGCtxiu8y8Asub-_1o
 
-# Simple hardcoded credentials (username: password)
-users = {
-    "dylan": "legalscope",
-    "jake": "legalscope",
-    "elias": "legalscope"
-}
+
+USERS='{"dylan": "legalscope", "jake": "legalscope", "elias": "legalscope"}'
